--- a/youtube-podcast-telegram.ipynb
+++ b/youtube-podcast-telegram.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install telebot yt-dlp Pillow\n",
+    "\n",
     "TEMP_DIR = \"TEST\"\n",
     "BOT_TOKEN = \"12345:6789\"\n",
     "ADMIN_CHAT_ID = 00000000\n",
