add datetime  range

--- a/youtube-podcast-telegram.ipynb
+++ b/youtube-podcast-telegram.ipynb
@@ -6,13 +6,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install telebot yt-dlp Pillow\n",
+    "!pip install -q telebot yt-dlp Pillow\n",
     "\n",
-    "TEMP_DIR = \"TEST\"\n",
-    "BOT_TOKEN = \"12345:6789\"\n",
-    "ADMIN_CHAT_ID = 00000000\n",
-    "CHAT_ID = -00000000\n",
+    "from google.colab import userdata\n",
+    "from datetime import datetime\n",
+    "\n",
+    "TEMP_DIR = \"LONGPLAY\"\n",
+    "BOT_TOKEN = userdata.get('TG_TOKEN')\n",
+    "ADMIN_CHAT_ID = 00000\n",
+    "CHAT_ID = -00000\n",
     "YT_CHANNEL_OR_PLAYLIST_LINK = \"\"\n",
+    "\n",
+    "min_date = datetime(2024, 1, 30)\n",
+    "max_date = datetime(2025, 1, 30)\n",
+    "# Convert the dates to Unix timestamps\n",
+    "max_timestamp = int(max_date.timestamp())\n",
+    "min_timestamp = int(min_date.timestamp())\n",
+    "\n",
     "\n",
     "from telebot import types\n",
     "import telebot\n",
@@ -77,10 +87,11 @@
     "    info_file = f'{temp_file}.json'\n",
     "\n",
     "    ydl_opts_audio = {\n",
-    "        \"outtmpl\": f\"{TEMP_DIR}/%(title)s-%(duration)s\",\n",
+    "        \"outtmpl\": f\"{TEMP_DIR}/%(upload_date)s-%(title)s-%(duration)s\",\n",
     "        \"noplaylist\": False,\n",
     "        \"format\": \"bestaudio[filesize_approx<=50M][ext=m4a]/bestaudio[filesize<=50M][ext=m4a]/wa\",\n",
     "        'writethumbnail': True,\n",
+    "        'daterange': f'{min_timestamp}-{max_timestamp}',  # Add the daterange filter\n",
     "    }\n",
     "\n",
     "\n",
@@ -89,30 +100,6 @@
     "        duration = info_audio.get(\"duration\", 0)\n",
     "        ydl_audio.download([url])\n",
     "        is_audio = True\n",
-    "\n",
-    "    return DownloadedMedia(temp_file, info_audio.get(\"title\", \"untitled\"), is_audio, duration)\n",
-    "\n",
-    "\n",
-    "def download_video_edia(url: str):\n",
-    "    temp_file_name = str(uuid.uuid4())\n",
-    "    temp_file = os.path.join(TEMP_DIR, temp_file_name)\n",
-    "    os.makedirs(TEMP_DIR, exist_ok=True)\n",
-    "    info_file = f'{temp_file}.json'\n",
-    "\n",
-    "    ydl_opts_audio = {\n",
-    "        \"outtmpl\": f\"{TEMP_DIR}/%(title)s-%(duration)s\",\n",
-    "        \"noplaylist\": False,\n",
-    "        \"format\": \"best\",\n",
-    "    }\n",
-    "\n",
-    "\n",
-    "    with  yt_dlp.YoutubeDL(ydl_opts_audio) as ydl_audio:\n",
-    "        info_audio = ydl_audio.extract_info(url, download=False)\n",
-    "        duration = info_audio.get(\"duration\", 0)\n",
-    "        ydl_audio.download([url])\n",
-    "        is_audio = False\n",
-    "\n",
-    "    return DownloadedMedia(temp_file, info_audio.get(\"title\", \"untitled\"), is_audio, duration)\n",
     "\n",
     "bot = telebot.TeleBot(BOT_TOKEN)\n",
     "\n",
@@ -125,23 +112,40 @@
     "    sorted_files = sorted(files)\n",
     "\n",
     "    for file_name in sorted_files:\n",
-    "        file_path = os.path.join(folder_path, file_name)\n",
-    "\n",
-    "        sleep_duration = random.uniform(2, 5)\n",
-    "        time.sleep(sleep_duration)\n",
     "\n",
     "        if os.path.isdir(file_path):\n",
     "            continue  # Skip directories\n",
     "\n",
-    "        if not file_name.lower().endswith(\".webp\") and not file_name.lower().endswith(\".jpg\")  :\n",
-    "            duration = int(file_name.split('-')[-1])\n",
-    "            reply_audio(file_path, file_name.rsplit('-', 1)[0], duration)\n",
+    "        date_str = file_name.split(\"-\", 1)[0]  # Extract the date part from the filename\n",
+    "        date = datetime.strptime(date_str, \"%Y%m%d\")  # Convert the date string to a datetime object\n",
+    "\n",
+    "        desired_date = datetime(2024, 4, 15)  # Set the desired date\n",
+    "\n",
+    "        if date < desired_date:\n",
+    "            # Skip processing the file\n",
+    "            print(\"Skipping file:\", file_name)\n",
+    "        else:\n",
+    "            # Process the file\n",
+    "            print(\"Processing file:\", file_name)\n",
+    "            file_path = os.path.join(folder_path, file_name)\n",
+    "\n",
+    "            sleep_duration = random.uniform(2, 5)\n",
+    "            time.sleep(sleep_duration)\n",
+    "\n",
+    "            if not file_name.lower().endswith(\".webp\") and not file_name.lower().endswith(\".jpg\"):\n",
+    "                duration = int(file_name.split('-')[-1])\n",
+    "                reply_audio(file_path, file_name.rsplit('-', 2)[1], duration)\n",
+    "\n",
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    download_audio_media(YT_CHANNEL_OR_PLAYLIST_LINK)\n",
     "    send_files(f'/content/{TEMP_DIR}')\n",
-    "    #bot.polling(none_stop=True, skip_pending=False)"
+    "    #bot.polling(none_stop=True, skip_pending=False)\n",
+    "     \n",
+    "\n",
+    "\n",
+    "     "
    ]
   },
   {
